<resources>
    <string name="app_name">AnimationAndTransitionTutorial</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_album_detail">AlbumDetail</string>
    <string name="desc_album_art">Album art</string>
    <string name="desc_album_title">Mean Something</string>
    <string name="desc_album_artist">Kinder Than Wolves</string>
    <string name="desc_fab">Action button</string>
    <string name="desc_sound_icon">Sound icon</string>
    <string name="track_title">Make You Feel</string>
    <string name="track_time">4:26</string>
    <string name="desc_album_thumbnail">Album art thumbnail</string>
    <string name="lyrics">
Twinkle, twinkle, little star,\n
How I wonder what you are!\n
Up above the world so high,\n
Like a diamond in the sky.\n
\n
When the blazing sun is gone,\n
When he nothing shines upon,\n
Then you show your little light,\n
Twinkle, twinkle, all the night.\n
\n
Then the traveller in the dark\n
Thanks you for your tiny sparks;\n
He could not see which way to go,\n
If you did not twinkle so.\n
\n
In the dark blue sky you keep,\n
And often through my curtains peep,\n
For you never shut your eye\n
\'Till the sun is in the sky.\n
\n
As your bright and tiny spark\n
Lights the traveller in the dark,\n
Though I know not what you are,\n
Twinkle, twinkle, little star.
    </string>
    <string name="block_of_text">Brother set had private his letters observe outward resolve. Shutters ye marriage to throwing we as. Effect in if agreed he wished wanted admire expect. Or shortly visitor is comfort placing to cheered do. Few hills tears are weeks saw. Partiality insensible celebrated is in. Am offended as wandered thoughts greatest an friendly. Evening covered in he exposed fertile to. Horses seeing at played plenty nature to expect we. Young say led stood hills own thing get.   You vexed shy mirth now noise. Talked him people valley add use her depend letter. Allowance too applauded now way something recommend. Mrs age men and trees jokes fancy. Gay pretended engrossed eagerness continued ten. Admitting day him contained unfeeling attention mrs out.   An country demesne message it. Bachelor domestic extended doubtful as concerns at. Morning prudent removal an letters by. On could my in order never it. Or excited certain sixteen it to parties colonel. Depending conveying direction has led immediate. Law gate her well bed life feet seen rent. On nature or no except it sussex. No opinions answered oh felicity is resolved hastened. Produced it friendly my if opinions humoured. Enjoy is wrong folly no taken. It sufficient instrument insipidity simplicity at interested. Law pleasure attended differed mrs fat and formerly. Merely thrown garret her law danger him son better excuse. Effect extent narrow in up chatty. Small are his chief offer happy had. </string>
</resources>
